# routes/measures.js
@@ -4,6 +4,9 @@ const express = require('express');
 // Instance for managing routers
 const router = express.Router();
 
+// *** Data Validation *** //
+const validation = require('../db/validation')
+
 // Instance to measures controller
 const measuresController = require('../controllers/measures');
 
@@ -11,16 +14,18 @@ const measuresController = require('../controllers/measures');
 router.get('/', measuresController.getAll);
 
 // For /id request via GET, showing a specific measure
-router.get('/:id', measuresController.getSingle);
+router.get('/:id_measure', measuresController.getSingle);
 
 // For / request via POST, creating a new measure
-// router.post('/', measuresController.createNewMeter);
+router.post('/', validation.insertUpdateMeasure, // *** Data Validation *** //
+                measuresController.createNewMeasure);  
 
 // For /id request via PUT, updating a specific measure
-// router.put('/:id', measuresController.updateOneMeasure);
+router.put('/:id_measure', validation.insertUpdateMeasure, // *** Data Validation *** //
+                measuresController.updateOneMeasure);
 
 // For /id request via DELETE, deleting a specific measure
-// router.delete('/:id', measuresController.deleteOneMeasure);
+router.delete('/:id_measure', measuresController.deleteOneMeasure);
 
 // Export router instance
 module.exports = router;
